<resources>
    <string name="app_name">Pexeso</string>
    <string name="konec">KONEC</string>
    <string name="nov_hra">NOVÁ HRA</string>
    <string name="v_sledky">VÝSLEDKY</string>
    <string name="todo">TODO</string>
    <string name="za_t_hr_t">ZAČÍT HRÁT</string>
    <string name="name">Name</string>
    <string name="jm_no_hr_e">Jméno hráče:</string>
    <string name="image">TODO</string>
    <string name="image10">TODO</string>
    <string name="image11">TODO</string>
    <string name="image12">TODO</string>
    <string name="image13">TODO</string>
    <string name="image14">TODO</string>
    <string name="image15">TODO</string>
    <string name="image16">TODO</string>
    <string name="image17">TODO</string>
    <string name="image18">TODO</string>
    <string name="image19">TODO</string>
    <string name="image2">TODO</string>
    <string name="image20">TODO</string>
    <string name="image3">TODO</string>
    <string name="image4">TODO</string>
    <string name="image5">TODO</string>
    <string name="image6">TODO</string>
    <string name="image7">TODO</string>
    <string name="tv_jmeno_hrace">TextView</string>
    <string name="tv_skore">TextView</string>
    <string name="game_result_message">%1$s, you completed the game in %2$d moves and %3$d seconds.</string>
    <string name="game_result_title">Game Result</string>
    <string name="exit">EXIT</string>
    <string name="new_game">NEW GAME</string>
    <string name="scoreboard">SCOREBOARD</string>
    <string name="player_name">Player name:</string>
    <string name="start_game">START GAME</string>
    <string name="player">Player</string>
    <string name="date">Date</string>
    <string name="score">Score</string>
    <string name="time">Time</string>
    <string name="textview">TextView</string>
    <string name="player37">Player37</string>
</resources>