<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.GameActivity">

    <ImageView
        android:id="@+id/image3"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:contentDescription="@string/image3"
        app:layout_constraintBottom_toBottomOf="@+id/image2"
        app:layout_constraintStart_toEndOf="@+id/image2"
        app:layout_constraintTop_toTopOf="@+id/image2"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/avocado" />

    <ImageView
        android:id="@+id/image4"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:contentDescription="@string/image4"
        app:layout_constraintBottom_toBottomOf="@+id/image3"
        app:layout_constraintStart_toEndOf="@+id/image3"
        app:layout_constraintTop_toTopOf="@+id/image3"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_jmeno_hrace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_jmeno_hrace"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/tv_jmeno_hrace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_jmeno_hrace" />

    <TextView
        android:id="@+id/tv_skore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/tv_skore"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/chronometer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chronometer" />

    <ImageView
        android:id="@+id/image1"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_jmeno_hrace"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/cardback" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:contentDescription="@string/image2"
        app:layout_constraintBottom_toBottomOf="@+id/image1"
        app:layout_constraintStart_toEndOf="@+id/image1"
        app:layout_constraintTop_toTopOf="@+id/image1"
        app:layout_constraintVertical_bias="1.0"
        tools:srcCompat="@drawable/apple" />

    <ImageView
        android:id="@+id/image5"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:contentDescription="@string/image5"
        app:layout_constraintEnd_toEndOf="@+id/image1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/image1"
        app:layout_constraintTop_toBottomOf="@+id/image1"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/image6"
        android:layout_width="95dp"
        android:layout_height="95dp"
        app:layout_constraintBottom_toBottomOf="@+id/image5"
        app:layout_constraintStart_toEndOf="@+id/image5"
        app:layout_constraintTop_toBottomOf="@+id/image1"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/image6" />

    <ImageView
        android:id="@+id/image7"
        android:layout_width="95dp"
        android:layout_height="95dp"
        app:layout_constraintBottom_toBottomOf="@+id/image6"
        app:layout_constraintStart_toEndOf="@+id/image6"
        app:layout_constraintTop_toBottomOf="@+id/image2"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/image7" />

    <ImageView
        android:id="@+id/image8"
        android:layout_width="95dp"
        android:layout_height="95dp"
        app:layout_constraintBottom_toBottomOf="@+id/image7"
        app:layout_constraintStart_toEndOf="@+id/image7"
        app:layout_constraintTop_toBottomOf="@+id/image3"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars"
        android:importantForAccessibility="no" />

    <ImageView
        android:id="@+id/image9"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="@+id/image5"
        app:layout_constraintStart_toStartOf="@+id/image5"
        app:layout_constraintTop_toBottomOf="@+id/image5"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/image10"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:contentDescription="@string/image10"
        app:layout_constraintBottom_toBottomOf="@+id/image9"
        app:layout_constraintStart_toEndOf="@+id/image9"
        app:layout_constraintTop_toBottomOf="@+id/image5"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/image11"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:contentDescription="@string/image11"
        app:layout_constraintBottom_toBottomOf="@+id/image10"
        app:layout_constraintStart_toEndOf="@+id/image10"
        app:layout_constraintTop_toBottomOf="@+id/image6"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/image13"
        android:layout_width="95dp"
        android:layout_height="95dp"
        app:layout_constraintEnd_toEndOf="@+id/image9"
        app:layout_constraintStart_toStartOf="@+id/image9"
        app:layout_constraintTop_toBottomOf="@+id/image9"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/image13" />

    <ImageView
        android:id="@+id/image12"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:contentDescription="@string/image12"
        app:layout_constraintBottom_toBottomOf="@+id/image11"
        app:layout_constraintStart_toEndOf="@+id/image11"
        app:layout_constraintTop_toBottomOf="@+id/image7"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/image17"
        android:layout_width="95dp"
        android:layout_height="95dp"
        app:layout_constraintEnd_toEndOf="@+id/image13"
        app:layout_constraintStart_toStartOf="@+id/image13"
        app:layout_constraintTop_toBottomOf="@+id/image13"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/image17" />

    <ImageView
        android:id="@+id/image16"
        android:layout_width="95dp"
        android:layout_height="95dp"
        app:layout_constraintBottom_toBottomOf="@+id/image15"
        app:layout_constraintStart_toEndOf="@+id/image15"
        app:layout_constraintTop_toBottomOf="@+id/image11"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/image16" />

    <ImageView
        android:id="@+id/image15"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:contentDescription="@string/image15"
        app:layout_constraintBottom_toBottomOf="@+id/image14"
        app:layout_constraintStart_toEndOf="@+id/image14"
        app:layout_constraintTop_toBottomOf="@+id/image10"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/image18"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:contentDescription="@string/image18"
        app:layout_constraintBottom_toBottomOf="@+id/image17"
        app:layout_constraintStart_toEndOf="@+id/image17"
        app:layout_constraintTop_toBottomOf="@+id/image13"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/image19"
        android:layout_width="95dp"
        android:layout_height="95dp"
        app:layout_constraintBottom_toBottomOf="@+id/image18"
        app:layout_constraintStart_toEndOf="@+id/image18"
        app:layout_constraintTop_toTopOf="@+id/image18"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/image19" />

    <ImageView
        android:id="@+id/image20"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:contentDescription="@string/image20"
        app:layout_constraintBottom_toBottomOf="@+id/image19"
        app:layout_constraintStart_toEndOf="@+id/image19"
        app:layout_constraintTop_toBottomOf="@+id/image15"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/image14"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:contentDescription="@string/image14"
        app:layout_constraintBottom_toBottomOf="@+id/image13"
        app:layout_constraintStart_toEndOf="@+id/image13"
        app:layout_constraintTop_toBottomOf="@+id/image9"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>