<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="@+id/btn_scoreboard"
        app:layout_constraintStart_toStartOf="@+id/btn_scoreboard"
        app:layout_constraintTop_toBottomOf="@+id/btn_scoreboard" />

    <Button
        android:id="@+id/btn_new_game"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/new_game"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="267dp"
        android:layout_height="232dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="72dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btn_scoreboard"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/scoreboard"
        app:layout_constraintEnd_toEndOf="@+id/btn_new_game"
        app:layout_constraintStart_toStartOf="@+id/btn_new_game"
        app:layout_constraintTop_toBottomOf="@+id/btn_new_game" />
</androidx.constraintlayout.widget.ConstraintLayout>